--- a/package.json
+++ b/package.json
@@ -6,23 +6,27 @@
     "watch": "microbundle watch src/index.ts -o build/index.js --target node --format esm --sourcemap false --generateTypes false --watch",
     "dev": "nodemon build/index.esm.js",
     "start": "node build/index.esm.js",
-    "fly": "fly deploy"
+    "fly": "fly deploy",
+    "test": "jest"
   },
   "dependencies": {
+    "auth0": "^4.2.0",
     "auth0-socketio": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.1",
-    "socket.io": "^4.7.2",
-    "auth0": "^4.2.0"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "jest": "^29.7.0",
     "microbundle": "^0.15.1",
     "nodemon": "^3.0.2",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
 }
